axum-macros/tests/from_request/fail/not_enum_or_struct.rs
use axum_macros::FromRequest;

#[derive(FromRequest)]
union Extractor {}

fn main() {}
